TERMINADO WIII (creo) (me mareé mucho con tantas cosas) (casi me vuelvo loca) (el responsive no funciona muy bien creo pero no supe arreglarlo)

--- a/about-me.html
+++ b/about-me.html
@@ -51,18 +51,18 @@
         </section>
         <section class="sobre-mi">
             <div class="sobre-mi-contenido">
-
                 <div class="sobre-mi-visual">
                     <div class="album-favorito">
                         <h5 class="sin-margen">my favorite album right now!</h5>
                         <iframe style="border-radius:12px"
                             src="https://open.spotify.com/embed/album/2PFJKjBqXpYrRcdClhfcnX?utm_source=generator&theme=0"
-                            width="100%" height="200" frameborder="0" allowfullscreen=""
+                            width="60%" height="200" frameborder="0" allowfullscreen=""
                             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                             loading="lazy"></iframe>
                     </div>
+
                     <div class="galeria-mascotas">
-                        <h5 class="sin-margen">my pets!</h5>
+                        <h5>my pets!</h5>
                         <input type="radio" name="slider" id="slide1" checked>
                         <input type="radio" name="slider" id="slide2">
                         <input type="radio" name="slider" id="slide3">
@@ -72,55 +72,54 @@
                         <input type="radio" name="slider" id="slide7">
                         <input type="radio" name="slider" id="slide8">
 
-                        <div class="arrows">
-                            <div class="arrow-left">
-                                <label for="slide8" class="prev prev1">&#8592;</label>
-                                <label for="slide1" class="prev prev2">&#8592;</label>
-                                <label for="slide2" class="prev prev3">&#8592;</label>
-                                <label for="slide3" class="prev prev4">&#8592;</label>
-                                <label for="slide4" class="prev prev5">&#8592;</label>
-                                <label for="slide5" class="prev prev6">&#8592;</label>
-                                <label for="slide6" class="prev prev7">&#8592;</label>
-                                <label for="slide7" class="prev prev8">&#8592;</label>
-                            </div>
-                            <div class="imagenes">
-                                <img src="img/mascota-1.jpg" alt="Mascota 1" class="img1">
-                                <img src="img/mascota-2.jpg" alt="Mascota 2" class="img2">
-                                <img src="img/mascota-3.jpg" alt="Mascota 3" class="img3">
-                                <img src="img/mascota-4.jpg" alt="Mascota 4" class="img4">
-                                <img src="img/mascota-5.jpg" alt="Mascota 5" class="img5">
-                                <img src="img/mascota-6.jpg" alt="Mascota 6" class="img6">
-                                <img src="img/mascota-7.jpg" alt="Mascota 7" class="img7">
-                                <img src="img/mascota-8.jpg" alt="Mascota 8" class="img8">
-                            </div>
-                            <div class="arrow-right">
-                                <label for="slide1" class="next next8">&#8594;</label>
-                                <label for="slide2" class="next next1">&#8594;</label>
-                                <label for="slide3" class="next next2">&#8594;</label>
-                                <label for="slide4" class="next next3">&#8594;</label>
-                                <label for="slide5" class="next next4">&#8594;</label>
-                                <label for="slide6" class="next next5">&#8594;</label>
-                                <label for="slide7" class="next next6">&#8594;</label>
-                                <label for="slide8" class="next next7">&#8594;</label>
-                            </div>
+                        <div class="imagenes-mascotas">
+                            <img src="img/mascota-1.jpg" alt="Mascota 1" class="img1">
+                            <img src="img/mascota-2.jpg" alt="Mascota 2" class="img2">
+                            <img src="img/mascota-3.jpg" alt="Mascota 3" class="img3">
+                            <img src="img/mascota-4.jpg" alt="Mascota 4" class="img4">
+                            <img src="img/mascota-5.jpg" alt="Mascota 5" class="img5">
+                            <img src="img/mascota-6.jpg" alt="Mascota 6" class="img6">
+                            <img src="img/mascota-7.jpg" alt="Mascota 7" class="img7">
+                            <img src="img/mascota-8.jpg" alt="Mascota 8" class="img8">
+                        </div>
+                        <div class="puntos-mascotas">
+                            <label for="slide1"></label>
+                            <label for="slide2"></label>
+                            <label for="slide3"></label>
+                            <label for="slide4"></label>
+                            <label for="slide5"></label>
+                            <label for="slide6"></label>
+                            <label for="slide7"></label>
+                            <label for="slide8"></label>
                         </div>
                     </div>
                 </div>
             </div>
+            <img src="img/forma-c.svg" alt="" class="forma-c-entre-secciones">
             <div class="sobre-mi-texto">
                 <div class="texto-full">
-                    <h4>studies</h4>
-                    <p>
-                        <span>Universidad Nacional de Lanús</span><br>
-                        Comunicación Visual - Diseño Gráfico y Visual
-                    </p>
-                    <p>
-                        <span>Instituto de Cultura Nuestra Señora de Lourdes</span><br>
-                        Técnico Superior en Economía y Administración
-                    </p>
+                    <div class="titulo-con-linea">
+                        <h4>studies</h4>
+                        <div class="linea-separadora-texto"></div>
+                    </div>
+                    <ul class="lista-limpia">
+                        <li>
+                            <strong>Universidad Nacional de Lanús</strong><br>
+                            <span>2021-present</span><br>
+                            Bachelor's Degree in Design and Visual Communication
+                        </li>
+                        <li>
+                            <strong>Instituto Nuestra Señora de Lourdes</strong><br>
+                            <span>2015-2020</span><br>
+                            Bachelor of Economics and Administration
+                        </li>
+                    </ul>
                 </div>
                 <div>
-                    <h4>my habilities</h4>
+                    <div class="titulo-con-linea">
+                        <h4>my habilities</h4>
+                        <div class="linea-separadora-texto"></div>
+                    </div>
                     <ul class="habilidades">
                         <li><img src="img/photoshop.svg" alt="Photoshop"> Photoshop (pretty good!)</li>
                         <li><img src="img/illustrator.svg" alt="Illustrator"> Illustrator (very good!)</li>
@@ -130,24 +129,45 @@
                     </ul>
                 </div>
                 <div>
-                    <h4>my experiences</h4>
-                    <p>
-                        <span>Freelance Designer</span><br>
-                        Experiencia en branding, diseño editorial y diseño gráfico.<br>
-                        Trabajo con clientes independientes y emprendedores.
-                    </p>
-                    <p>
-                        <span>Community Manager</span><br>
-                        Gestión de redes sociales, planificación de contenido, campañas y engagement.
-                    </p>
+                    <div class="titulo-con-linea">
+                        <h4>my experiences</h4>
+                        <div class="linea-separadora-texto"></div>
+                    </div>
+                    <ul class="lista-limpia">
+                        <li>
+                            <strong>Freelance Designer</strong><br>
+                            <span>2022-present</span>
+                            <ul class="lista-limpia">
+                                <li>☆Branding and visual identity design and strategies</li>
+                                <li>☆Editorial design</li>
+                                <li>☆3D design of custom pieces</li>
+                                <li>☆Product photography</li>
+                                <li>☆Social media design and management</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>3D Printing Business in Argentina</strong><br>
+                            <span>2023-2024</span>
+                            <ul class="lista-limpia">
+                                <li>☆Managed my own small business, selling custom 3D printed items both online and in
+                                    street markets.</li>
+                                <li>☆Handled customer service, sales, and payments in person and online.</li>
+                                <li>☆Learned to work independently and as part of a team, organizing my time and
+                                    prioritizing tasks.</li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
                 <div>
-                    <h4>languages</h4>
-                    <p>
-                        Spanish (native)<br>
-                        English (B2)<br>
-                        Dutch (A1)
-                    </p>
+                    <div class="titulo-con-linea">
+                        <h4>languages</h4>
+                        <div class="linea-separadora-texto"></div>
+                    </div>
+                    <ul class="lista-limpia">
+                        <li>Spanish (native)</li>
+                        <li>English (B2)</li>
+                        <li>Dutch (A1)</li>
+                    </ul>
                 </div>
             </div>
         </section>
