--- a/contact-me.html
+++ b/contact-me.html
@@ -74,7 +74,7 @@
                     <h5 class="sin-margen">And I want to...</h5>
                     <textarea name="mensaje" placeholder="Write your idea or a description of your proyect"></textarea>
                 </div>
-                <button type="submit">enviar</button>
+                <button type="submit">send</button>
             </form>
         </section>
         <h5>*don't get scared if I respond too fast!</h5>
