--- a/cult-of-horror-festival.html
+++ b/cult-of-horror-festival.html
@@ -79,7 +79,7 @@
                 <h4>more of this proyect</h4>
             </div>
             <div class="galeria">
-                <div class="galeria-item"><img src="img/cult-full.jpg"
+                <div class="galeria-item"><img src="img/cult-full-galeria.jpg"
                         alt="Picture of a brochure for Cult of Horror Fest"></div>
                 <div class="galeria-item"><img src="img/cult-closeup.jpg"
                         alt="Picture of a brochure for Cult of Horror Fest, close up"></div>
