--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
                 <span class="typing-hero">SOFITO</span>
             </div>
         </section>
-
-
         <section class="intro">
-            <div class="asterisco"></div>
+            <div class="asterisco">
+            </div>
             <div class="texto">
                 <p>
                     and i'm a graphic designer <br>
@@ -51,46 +50,39 @@
                 </div>
             </div>
         </section>
-
-
-
         <section class="projects-gallery">
             <div class="subtitulo">
                 <img src="img/asterisco.svg" alt="asterisco">
-                <h4>enjoy some <br>
-                    of my works!</h4>
+                <h4>enjoy some <br> of my works!</h4>
             </div>
-
-            <div class="project">
-                <a href="cult-of-horror-festival.html">
-                    <div class="project-image-contenedor">
-                        <div class="project-title">cult of horror festival</div>
-                        <div class="project-image" style="background-image: url('img/festival-cultofhorror.jpg');">
+            <div class="projects-sticky-wrapper">
+                <div class="project-sticky">
+                    <a href="cult-of-horror-festival.html">
+                        <div class="project-image-contenedor">
+                            <div class="project-title">cult of horror festival</div>
+                            <div class="project-image" style="background-image: url('img/festival-cultofhorror.jpg');">
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="project">
-                <a href="environmental-poster.html">
-                    <div class="project-image-contenedor">
-                        <div class="project-title">environmental awareness poster</div>
-                        <div class="project-image" style="background-image: url('img/afiche-ambiente.jpg');"></div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="project">
-                <a href="untu-center.html">
-                    <div class="project-image-contenedor">
-                        <div class="project-title">UNTU cultural center</div>
-                        <div class="project-image" style="background-image: url('img/centro-untu.jpg');"></div>
-                    </div>
-                </a>
+                    </a>
+                </div>
+                <div class="project-sticky">
+                    <a href="environmental-poster.html">
+                        <div class="project-image-contenedor">
+                            <div class="project-title">environmental awareness poster</div>
+                            <div class="project-image" style="background-image: url('img/afiche-ambiente.jpg');"></div>
+                        </div>
+                    </a>
+                </div>
+                <div class="project-sticky">
+                    <a href="untu-center.html">
+                        <div class="project-image-contenedor">
+                            <div class="project-title">UNTU cultural center</div>
+                            <div class="project-image" style="background-image: url('img/centro-untu.jpg');"></div>
+                        </div>
+                    </a>
+                </div>
             </div>
         </section>
-
-
         <section class="more-works">
             <img src="img/forma-b.svg" alt="" class="forma-fondo">
             <div class="subtitulo">
