--- a/my-work.html
+++ b/my-work.html
@@ -31,6 +31,8 @@
         <section class="titulo-principal">
             <h1 class="titulo-noculture">mY <br>wOrks !!</h1>
             <h1 class="titulo-raleway">my <br>works !!</h1>
+            <img src="img/asterisco-rojo.svg" alt="Asterisco rojo" class="asterisco-rojo-titulo">
+
         </section>
         <section>
             <div class="texto-principal">
@@ -45,23 +47,95 @@
 
             <h5>/poster design /branding /festival identity /editorial design </h5>
         </section>
-        <section class="more-works">
-            <img src="img/forma-b.svg" alt="" class="forma-fondo-mistrabajos">
-            <div class="grid-wrapper">
-                <div class="column">
-                    <img src="img/cult-full-galeria.jpg" alt="Cult of Horror Festival">
-                    <img src="img/festival-tnc.jpg" alt="Festival TNC">
-                    <img src="img/limkraf-galeria.jpg" alt="Limkraf Bakery">
-                    <img src="img/somnia-revista.jpg" alt="Somnia Magazine">
-                </div>
-                <div class="column">
-                    <img src="img/afiche-ambiente-galeria.jpg" alt="Environmental Awareness Poster">
-                    <img src="img/metropolitan.jpg" alt="Metropolitan bottle">
-                    <img src="img/untu-institucional.jpg" alt="UNTU South Africa Cultural Center">
-                    <img src="img/arrabalera.jpg" alt="Arrabalera Proyect">
-                </div>
+        <section class="more-works index-lista">
+
+            <ul class="index-ul">
+                <a href="cult-of-horror-festival.html">
+                    <li>TNC Festival*</li>
+                </a>
+                <a href="untu-center.html">
+                    <li>UNTU South Africa Cultural Center*</li>
+                </a>
+                <a href="environmental-poster.html">
+                    <li>Environmental Awareness Poster*</li>
+                </a>
+                <a href="cult-of-horror-festival.html">
+                    <li>Arrabalera*</li>
+                </a>
+                <a href="cult-of-horror-festival.html">
+                    <li>Cult of Horror Festival*</li>
+                </a>
+                <a href="cult-of-horror-festival.html">
+                    <li>Metropolitan*</li>
+                </a>
+                <a href="cult-of-horror-festival.html">
+                    <li>Limkraf*</li>
+                </a>
+                <a href="cult-of-horror-festival.html">
+                    <li>Somnia: Sleep Psychology Magazine*</li>
+                </a>
+            </ul>
+        </section>
+        <section>
+            <div class="project-sticky">
+                <a href="environmental-poster.html">
+                    <div class="project-image-contenedor">
+                        <div class="project-title">TNC Festival</div>
+                        <div class="project-image" style="background-image: url('img/tnc-grande.jpg');"></div>
+                    </div>
+                </a>
+            </div>
+            <div class="project-sticky">
+                <a href="untu-center.html">
+                    <div class="project-image-contenedor">
+                        <div class="project-title">UNTU cultural center</div>
+                        <div class="project-image" style="background-image: url('img/centro-untu.jpg');"></div>
+                    </div>
+                </a>
+            </div>
+            <div class="project-sticky">
+                <a href="environmental-poster.html">
+                    <div class="project-image-contenedor">
+                        <div class="project-title">Environmental Awareness Poster</div>
+                        <div class="project-image" style="background-image: url('img/afiche-ambiente.jpg');"></div>
+                    </div>
+                </a>
+            </div>
+            <div class="project-sticky">
+                <a href="untu-center.html">
+                    <div class="project-image-contenedor">
+                        <div class="project-title">Arrabalera</div>
+                        <div class="project-image" style="background-image: url('img/arrabalera-grande.jpg');"></div>
+                    </div>
+                </a>
+            </div>
+            <div class="project-sticky">
+                <a href="cult-of-horror-festival.html">
+                    <div class="project-image-contenedor">
+                        <div class="project-title">Cult of Horror Fest</div>
+                        <div class="project-image" style="background-image: url('img/festival-cultofhorror.jpg');">
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="project-sticky">
+                <a href="untu-center.html">
+                    <div class="project-image-contenedor">
+                        <div class="project-title">Metropolitan</div>
+                        <div class="project-image" style="background-image: url('img/metropolitan-grande.jpg');"></div>
+                    </div>
+                </a>
+            </div>
+            <div class="project-sticky">
+                <a href="untu-center.html">
+                    <div class="project-image-contenedor">
+                        <div class="project-title">Somnia: Sleep Psychology Magazine</div>
+                        <div class="project-image" style="background-image: url('img/somnia-grande.jpg');"></div>
+                    </div>
+                </a>
             </div>
         </section>
+
         <section class="work-section">
             <div class="work-content">
                 <h3>
